--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -35,8 +35,10 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: '18'
-      - run: npm i
-      - run: npm run build
+      - name: Install Dependencies
+        run: npm i
+      - name: Build project
+        run: npm run build
       - name: Setup Pages
         uses: actions/configure-pages@v3
       - name: Upload artifact
