--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -31,20 +31,17 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-      - name: Use Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: '18'
-      - name: Install Dependencies
-        run: npm i
-      - name: Build project
-        run: npm run build
+      - name: Install and Build
+        run: |
+          npm i
+          npm run build
+        env:
+          CI: false
       - name: Setup Pages
         uses: actions/configure-pages@v3
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v2
         with:
-          # Upload entire repository
           path: './dist'
       - name: Deploy to GitHub Pages
         id: deployment
